--- a/Code/interferome/HIV_treated.Rmd
+++ b/Code/interferome/HIV_treated.Rmd
@@ -147,11 +147,14 @@ rna_info <- data.frame(pid = rna.pid, Group = as.factor(c(rep("Control", 11),
 rna_info$Group %<>% relevel("Control")
 
 ## cnts. list
+dir <- "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/plots/"
+
 cnts.list <- list(cnts_f, cnts.edger, cnts.deseq2, cnts.tpm)
 cnts.names <- c("Filtered Counts", "TMM Normalized Counts",
                 "DESeq2 Normalized Counts", "TPM Normalized Counts")
 par(mfrow = c(1,2))
-for (i in 1:4){
+###### OR i in 1:4 for all plots 
+for (i in 2){
   j  = cnts.list[[i]]
   ## using scater, start with an object
 example_sce <- SingleCellExperiment(
@@ -160,11 +163,13 @@ example_sce <- SingleCellExperiment(
 ## RLE plots
 print( scater::plotRLE(example_sce, exprs_values = "counts", exprs_logged = FALSE,
         colour_by = "Group", style = "minimal") + scale_x_discrete("Samples", labels = rna.pid) + labs(caption = paste("RLE Plot:" ,cnts.names[i]) ) )
+ggsave(paste(dir, "RLE_plot_2outliers.tiff", sep = "") , dpi = 300)
 ## pca plots
 example_sce <- SingleCellExperiment(
                  assays = list(logcounts = j),
                  colData = rna_info)
 print( scater::plotPCA(example_sce, colour_by = "Group", size_by = "Group") + labs(caption = paste(  "PCA Plot:",cnts.names[i]) ))
+ggsave(paste(dir, "PCA_plot_2outliers.tiff", sep = "") , dpi = 300)
 }
 
 ######### the whole gene list is a fair list###########
@@ -237,7 +242,7 @@ cnts.list <- list(cnts_f_dele, cnts.edger, cnts.deseq2, cnts.tpm)
 cnts.names <- c("Filtered Counts", "TMM Normalized Counts",
                 "DESeq2 Normalized Counts", "TPM Normalized Counts")
 par(mfrow = c(1,2))
-for (i in 1:4){
+for (i in 2){
   j  = cnts.list[[i]]
   ## using scater, start with an object
 example_sce <- SingleCellExperiment(
@@ -246,11 +251,13 @@ example_sce <- SingleCellExperiment(
 ## RLE plots
 print( scater::plotRLE(example_sce, exprs_values = "counts", exprs_logged = FALSE,
         colour_by = "Group", style = "minimal") + scale_x_discrete("Samples", labels = rna.pid) + labs(caption = paste("RLE Plot:" ,cnts.names[i]) ) )
+ggsave(paste(dir, "RLE_plot_outlier.tiff", sep = "") , dpi = 300)
 ## pca plots
 example_sce <- SingleCellExperiment(
                  assays = list(logcounts = j),
                  colData = rna_info)
 print( scater::plotPCA(example_sce, colour_by = "Group", size_by = "Group") + labs(caption = paste(  "PCA Plot:",cnts.names[i]) ))
+ggsave(paste(dir, "PCA_plot_outlier.tiff", sep = "") , dpi = 300)
 }
 
 ```
@@ -290,9 +297,9 @@ summary(decideTests(et, p.value = 0.05,
 ########## deleted ###########
 "TR1750"
 ## import genes lists 
-isgs <- as.data.frame(read.delim("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataRaw/coreISG"))
+isgs <- as.data.frame(read.delim("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataRaw/coreISG252"))
 dim(isgs)
-genesbeta <- as.data.frame(read.delim("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataRaw/genesbeta"))
+genesbeta <- as.data.frame(read.delim("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataRaw/genesbeta424"))
 dim(genesbeta)
 sig_res <- as.data.frame(topTags(et, n = 30, adjust.method = "BH")[[1]])
 
@@ -444,6 +451,14 @@ paste("Scaling Factors of edgeR")
 y$samples
 # the TMM normalized Counts
 cnts.edger <- edgeR::cpm(y)
+cnts.TMM.id <- cnts.edger %>% as.data.frame() %>% rownames_to_column("Gene_ID")
+sum(cnts.TMM.id$Gene_ID == cnts_fsym$Gene_ID)
+
+
+# save TMM normalized counts 
+write.xlsx(merge(cnts.TMM.id, cnts_fsym[, 1:2], by = "Gene_ID"),
+           "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/TMM_counts_HIVtreated.xlsx",
+           sheetName="TMM HIV treated")
 
 ## cnts. list
 # all remains the sames other than cnts.edger
@@ -457,7 +472,8 @@ rna_info <- data.frame(pid = rna.pid, Group = as.factor(c(rep("Control", 10),
                                                      rep("HIV-Treated", 14)
                                                      )) )
 rna_info$Group %<>% relevel("Control")
-
+dir <- "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/plots/"
+# qc plots
 for (i in 2){
   j  = cnts.list[[i]]
   ## using scater, start with an object
@@ -467,11 +483,99 @@ example_sce <- SingleCellExperiment(
 ## RLE plots
 print( scater::plotRLE(example_sce, exprs_values = "counts", exprs_logged = FALSE,
         colour_by = "Group", style = "minimal") + scale_x_discrete("Samples", labels = rna.pid) + labs(caption = paste("RLE Plot:" ,cnts.names[i]) ) )
+ggsave(paste(dir, "RLE_plot.tiff", sep = "") , dpi = 300)
 ## pca plots
 example_sce <- SingleCellExperiment(
                  assays = list(logcounts = j),
                  colData = rna_info)
 print( scater::plotPCA(example_sce, colour_by = "Group", size_by = "Group") + labs(caption = paste(  "PCA Plot:",cnts.names[i]) ))
+ggsave(paste(dir, "PCA_plot.tiff", sep = "") , dpi = 300)
 }
+
+
+############### DE analysis ########################
+## DE analysis of edger
+y <- estimateDisp(y)
+et <- exactTest(y, pair = 1:2)
+dim(et)
+y$samples
+### results
+topTags(et, n = 10, adjust.method = "BH")
+head(et$table)
+et$comparison
+## summary results
+summary(decideTests(et, p.value = 0.2,
+            lfc = 0))
+
+summary(decideTests(et, p.value = 0.1,
+            lfc = 0))
+
+summary(decideTests(et, p.value = 0.05,
+            lfc = 0))
+# paste(1706+ 2540, "genes with FDR 0.05")
+
+summary(decideTests(et, p.value = 0.05,
+            lfc = 1))
+# paste(157 + 680, "genes with FDR 0.05")
+
+summary(decideTests(et, p.value = 0.05,
+            lfc = 2))
+
+################# results #############
+## import genes lists 
+isgs <- as.data.frame(read.delim("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataRaw/coreISG252"))
+dim(isgs)
+genesbeta <- as.data.frame(read.delim("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataRaw/genesbeta424"))
+dim(genesbeta)
+sig_res <- as.data.frame(topTags(et, n = 30, adjust.method = "BH")[[1]])
+
+sig_res_format <- sig_res %>% data.frame() %>% rownames_to_column("Gene_ID")
+
+write.xlsx(sig_res_format,
+           "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/DE_results_treated_005.xlsx", sheetName="DE Results Treated")
+
+# relax the cutoff to 0.05
+merge(sig_res_format,  isgs, by = "Gene_ID")
+merge(sig_res_format,  genesbeta, by = "Gene_ID")
+
+# relax the cutoff to 0.2
+sig_res <- as.data.frame(topTags(et, n = 121, adjust.method = "BH")[[1]])
+
+sig_res_format <- sig_res %>% data.frame() %>% rownames_to_column("Gene_ID")
+
+results.isgs <- merge(sig_res_format,  isgs, by = "Gene_ID")
+results.isgs
+write.xlsx(results.isgs,
+           "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/DE_isgs_results_treated_02.xlsx", sheetName="DE Results ISGS Treated")
+results.genesbeta <-  merge(sig_res_format,  genesbeta, by = "Gene_ID")
+results.genesbeta
+write.xlsx(results.genesbeta,
+           "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/DE_genesbeta_results_treated_02.xlsx", sheetName="DE Results Beta Treated")
+
+results <- merge(sig_res_format, cnts_fsym[, c(1,2)], by = "Gene_ID") %>% 
+            dplyr::select(-Gene_ID) %>% dplyr::select( Symbol, everything())  %>% 
+                dplyr::arrange(PValue)  %>%   dplyr::mutate(Direction = ifelse(logFC > 0, 
+                                                                               "Up in HIV",
+                                                                               "Down in HIV") ) 
+
+results %>% kable
+
+write.xlsx(results,
+           "~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/DE_results_treated_02.xlsx", sheetName="DE Results Treated")
+
+############### grouped scatter plot ###################
+par(mfrow = c(1,1))
+# all the results 
+res.edger <- et$table %>% dplyr::mutate(Symbol = cnts_fsym$Symbol,
+                                 FDR = p.adjust(et$table$PValue, method = "BH") )
+# label 
+group.plot <- factor(c(rep(1,10), rep(2,14)), labels = c("Health Control", "HIV-Treated"))
+for(i in order(res.edger$PValue)[1:30]){
+  sim_plotcounts(i)
+  # tiff( paste ("~/Documents/gitlab/Cario_RNASeq_Microbiom_Inte/DataProcessed/Summary/Treated/plots/grouped_scattter",i, ".tiff", sep = "") )
+  # dev.off()
+}
+
+
 
 ```
